--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "dotenv": "^9.0.0",
+    "gsap": "^3.6.1",
+    "locomotive-scroll": "^4.1.1",
+    "three": "^0.128.0",
+    "underscore": "^1.13.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
